# nondeterministic-stack-rnn

./: .dockerignore  .gitignore  Dockerfile  Dockerfile-dev  README.md  pyproject.toml
data/: circuits.json
data/syntaxgym/: center_embed.json  center_embed_mod.json  cleft.json  cleft_modifier.json  fgd-embed3.json  fgd-embed4.json  fgd_hierarchy.json  fgd_object.json  fgd_pp.json  fgd_subject.json  mvrr.json  mvrr_mod.json  npi_orc_any.json  npi_orc_ever.json  npi_src_any.json  npi_src_ever.json  npz_ambig.json  npz_ambig_mod.json  npz_obj.json  (+12 more)
experiments/: include.bash  job-script.bash  replace-paths.bash  run-singularity.bash  singularity-shell.bash  submit-job.bash  variables.bash
scripts/: build-docker-dev-image.bash  build-docker-image.bash  build-singularity-image.bash  docker-exec.bash  docker-shell.bash  dockerdev.bash  download-ptb.bash  generate-code-submission.bash  get-docker-image.bash  poetry-install.bash  pull-docker-image.bash  pull-singularity-image.bash  setup.bash  singularity-shell.bash  variables.bash
src/: aggregate_sg_score_by_circuit.py  build-lm-zoo-image.bash  build_vocab.py  compute-image-sg-score.bash  compute-sg-score.bash  compute_average.py  count_parameters.py  generate_test_data.py  get_ptb_results.bash  plot_ns_operations.py  plot_sg_score_vs_perplexity.py  plot_test.py  plot_train.py  print_best.py  print_data.py  print_grid_search.py  print_hardest_cfl_data.py  print_valid_perplexity.py  random_sample.py  read_wall_clock_time.py  syntaxgym_result_to_accuracy.py  test.py  test_natural_with_context.py  train.py  train_cfl.py  train_natural_with_context.py
tests/: reference_util.py  test_grefenstette.py  test_joulin_mikolov.py  test_layer.py  test_limited_nondeterministic_stack_rnn.py  test_limited_rns_rnn.py  test_limited_vector_rns_rnn.py  test_lower_bound.py  test_nondeterministic_stack_rnn.py  test_rnn.py  test_rns_rnn.py  test_unidirectional_rnn.py  test_vector_rns_rnn.py
(+234 files in other folders)
