[tool.poetry]
name = "nsrnn"
version = "1.0.0"
description = "Code for the paper \"Learning Context-free Languages with Nondeterministic Stack RNNs\""
authors = ["Brian DuSell"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.6.0"
numpy = "^1.19.2"
matplotlib = "^3.3.2"
attrs = "^20.2.0"
tikzplotlib = "^0.9.4"
torch-semiring-einsum = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
